# tf-module-scaffolder

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
tests/: test_cli.py  test_definitions.py  test_engine.py  test_models.py  test_templates.py
tf_module_scaffolder/: __init__.py  cli.py  engine.py  models.py
tf_module_scaffolder/output/: console.py
tf_module_scaffolder/templates/: definitions.py  hcl.py
