[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tf-module-scaffolder"
version = "1.0.0"
description = "CLI tool to scaffold production-ready Terraform modules with best practices"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "Sanjay S", email = "sanjaysundarmurthy@gmail.com"}]
keywords = [
    "terraform", "infrastructure-as-code", "scaffolding", "devops",
    "aws", "azure", "gcp", "module", "iac", "cli",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]

[project.scripts]
tf-scaffold = "tf_module_scaffolder.cli:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.per-file-ignores]
"tf_module_scaffolder/templates/hcl.py" = ["E501"]
